Compiled VFS module for Samba 4.16, and included those in .rpm and .deb

--- a/DEBIAN/Makefile
+++ b/DEBIAN/Makefile
@@ -113,6 +113,7 @@ ifeq ($(ARCH), amd64)
 	install -m 0644 -D -p samba-module/bin/4.13/greyhole-x86_64.so $(DESTDIR)usr/lib64/greyhole/greyhole-samba413.so
 	install -m 0644 -D -p samba-module/bin/4.14/greyhole-x86_64.so $(DESTDIR)usr/lib64/greyhole/greyhole-samba414.so
 	install -m 0644 -D -p samba-module/bin/4.15/greyhole-x86_64.so $(DESTDIR)usr/lib64/greyhole/greyhole-samba415.so
+	install -m 0644 -D -p samba-module/bin/4.16/greyhole-x86_64.so $(DESTDIR)usr/lib64/greyhole/greyhole-samba416.so
 else
 ifeq ($(ARCH), armhf)
 		mkdir -p $(DESTDIR)usr/lib/greyhole/
@@ -144,6 +145,7 @@ ifeq ($(ARCH), arm64)
 		install -m 0644 -D -p samba-module/bin/4.13/greyhole-arm64.so $(DESTDIR)usr/lib/aarch64-linux-gnu/greyhole/greyhole-samba413.so
 		install -m 0644 -D -p samba-module/bin/4.14/greyhole-arm64.so $(DESTDIR)usr/lib/aarch64-linux-gnu/greyhole/greyhole-samba414.so
 		install -m 0644 -D -p samba-module/bin/4.15/greyhole-arm64.so $(DESTDIR)usr/lib/aarch64-linux-gnu/greyhole/greyhole-samba415.so
+		install -m 0644 -D -p samba-module/bin/4.16/greyhole-arm64.so $(DESTDIR)usr/lib/aarch64-linux-gnu/greyhole/greyhole-samba416.so
 else
 		mkdir -p $(DESTDIR)usr/lib/greyhole/
 		install -m 0644 -D -p samba-module/bin/3.4/greyhole-i386.so $(DESTDIR)usr/lib/greyhole/greyhole-samba34.so
@@ -165,6 +167,7 @@ else
 		install -m 0644 -D -p samba-module/bin/4.13/greyhole-i386.so $(DESTDIR)usr/lib/greyhole/greyhole-samba413.so
 		install -m 0644 -D -p samba-module/bin/4.14/greyhole-i386.so $(DESTDIR)usr/lib/greyhole/greyhole-samba414.so
 		install -m 0644 -D -p samba-module/bin/4.15/greyhole-i386.so $(DESTDIR)usr/lib/greyhole/greyhole-samba415.so
+		install -m 0644 -D -p samba-module/bin/4.16/greyhole-i386.so $(DESTDIR)usr/lib/greyhole/greyhole-samba416.so
 endif
 endif
 endif
