New: VFS module for 4.18 Bugfix: deb-specific modules, starting at 4.17 : using non-bundled (i.e. shared) libraries (for ldb, tdb, tevent & talloc) - Ref: #312

--- a/DEBIAN/Makefile
+++ b/DEBIAN/Makefile
@@ -114,7 +114,8 @@ ifeq ($(ARCH), amd64)
 	install -m 0644 -D -p samba-module/bin/4.14/greyhole-x86_64.so $(DESTDIR)usr/lib64/greyhole/greyhole-samba414.so
 	install -m 0644 -D -p samba-module/bin/4.15/greyhole-x86_64.so $(DESTDIR)usr/lib64/greyhole/greyhole-samba415.so
 	install -m 0644 -D -p samba-module/bin/4.16/greyhole-x86_64.so $(DESTDIR)usr/lib64/greyhole/greyhole-samba416.so
-	install -m 0644 -D -p samba-module/bin/4.16/greyhole-x86_64.so $(DESTDIR)usr/lib64/greyhole/greyhole-samba417.so
+	install -m 0644 -D -p samba-module/bin/4.17/greyhole-x86_64-deb.so $(DESTDIR)usr/lib64/greyhole/greyhole-samba417.so
+	install -m 0644 -D -p samba-module/bin/4.18/greyhole-x86_64-deb.so $(DESTDIR)usr/lib64/greyhole/greyhole-samba418.so
 else
 ifeq ($(ARCH), armhf)
 		mkdir -p $(DESTDIR)usr/lib/greyhole/
@@ -131,6 +132,7 @@ ifeq ($(ARCH), armhf)
 		install -m 0644 -D -p samba-module/bin/4.7/greyhole-armhf.so $(DESTDIR)usr/lib/greyhole/greyhole-samba47.so
 		install -m 0644 -D -p samba-module/bin/4.8/greyhole-armhf.so $(DESTDIR)usr/lib/greyhole/greyhole-samba48.so
 		install -m 0644 -D -p samba-module/bin/4.9/greyhole-armhf.so $(DESTDIR)usr/lib/greyhole/greyhole-samba49.so
+		# Stopped supporting armhf (32-bit) arch starting at Samba 4.10
 else
 ifeq ($(ARCH), arm64)
 		mkdir -p $(DESTDIR)usr/lib/greyhole/
@@ -147,7 +149,8 @@ ifeq ($(ARCH), arm64)
 		install -m 0644 -D -p samba-module/bin/4.14/greyhole-arm64.so $(DESTDIR)usr/lib/aarch64-linux-gnu/greyhole/greyhole-samba414.so
 		install -m 0644 -D -p samba-module/bin/4.15/greyhole-arm64.so $(DESTDIR)usr/lib/aarch64-linux-gnu/greyhole/greyhole-samba415.so
 		install -m 0644 -D -p samba-module/bin/4.16/greyhole-arm64.so $(DESTDIR)usr/lib/aarch64-linux-gnu/greyhole/greyhole-samba416.so
-		install -m 0644 -D -p samba-module/bin/4.16/greyhole-arm64.so $(DESTDIR)usr/lib/aarch64-linux-gnu/greyhole/greyhole-samba417.so
+		install -m 0644 -D -p samba-module/bin/4.17/greyhole-arm64-deb.so $(DESTDIR)usr/lib/aarch64-linux-gnu/greyhole/greyhole-samba417.so
+		install -m 0644 -D -p samba-module/bin/4.18/greyhole-arm64-deb.so $(DESTDIR)usr/lib/aarch64-linux-gnu/greyhole/greyhole-samba418.so
 else
 		mkdir -p $(DESTDIR)usr/lib/greyhole/
 		install -m 0644 -D -p samba-module/bin/3.4/greyhole-i386.so $(DESTDIR)usr/lib/greyhole/greyhole-samba34.so
@@ -170,7 +173,7 @@ else
 		install -m 0644 -D -p samba-module/bin/4.14/greyhole-i386.so $(DESTDIR)usr/lib/greyhole/greyhole-samba414.so
 		install -m 0644 -D -p samba-module/bin/4.15/greyhole-i386.so $(DESTDIR)usr/lib/greyhole/greyhole-samba415.so
 		install -m 0644 -D -p samba-module/bin/4.16/greyhole-i386.so $(DESTDIR)usr/lib/greyhole/greyhole-samba416.so
-		install -m 0644 -D -p samba-module/bin/4.16/greyhole-i386.so $(DESTDIR)usr/lib/greyhole/greyhole-samba417.so
+		# Stopped supporting i386 arch starting at Samba 4.17
 endif
 endif
 endif
