--- a/DEBIAN/Makefile
+++ b/DEBIAN/Makefile
@@ -116,6 +116,7 @@ ifeq ($(ARCH), amd64)
 	install -m 0644 -D -p samba-module/bin/4.16/greyhole-x86_64.so $(DESTDIR)usr/lib64/greyhole/greyhole-samba416.so
 	install -m 0644 -D -p samba-module/bin/4.17/greyhole-x86_64-deb.so $(DESTDIR)usr/lib64/greyhole/greyhole-samba417.so
 	install -m 0644 -D -p samba-module/bin/4.18/greyhole-x86_64-deb.so $(DESTDIR)usr/lib64/greyhole/greyhole-samba418.so
+	install -m 0644 -D -p samba-module/bin/4.19/greyhole-x86_64-deb.so $(DESTDIR)usr/lib64/greyhole/greyhole-samba419.so
 else
 ifeq ($(ARCH), armhf)
 		mkdir -p $(DESTDIR)usr/lib/greyhole/
@@ -151,6 +152,7 @@ ifeq ($(ARCH), arm64)
 		install -m 0644 -D -p samba-module/bin/4.16/greyhole-arm64.so $(DESTDIR)usr/lib/aarch64-linux-gnu/greyhole/greyhole-samba416.so
 		install -m 0644 -D -p samba-module/bin/4.17/greyhole-arm64-deb.so $(DESTDIR)usr/lib/aarch64-linux-gnu/greyhole/greyhole-samba417.so
 		install -m 0644 -D -p samba-module/bin/4.18/greyhole-arm64-deb.so $(DESTDIR)usr/lib/aarch64-linux-gnu/greyhole/greyhole-samba418.so
+		install -m 0644 -D -p samba-module/bin/4.19/greyhole-arm64-deb.so $(DESTDIR)usr/lib/aarch64-linux-gnu/greyhole/greyhole-samba419.so
 else
 		mkdir -p $(DESTDIR)usr/lib/greyhole/
 		install -m 0644 -D -p samba-module/bin/3.4/greyhole-i386.so $(DESTDIR)usr/lib/greyhole/greyhole-samba34.so
