--- a/DEBIAN/Makefile
+++ b/DEBIAN/Makefile
@@ -117,6 +117,8 @@ ifeq ($(ARCH), amd64)
 	install -m 0644 -D -p samba-module/bin/4.17/greyhole-x86_64-deb.so $(DESTDIR)usr/lib64/greyhole/greyhole-samba417.so
 	install -m 0644 -D -p samba-module/bin/4.18/greyhole-x86_64-deb.so $(DESTDIR)usr/lib64/greyhole/greyhole-samba418.so
 	install -m 0644 -D -p samba-module/bin/4.19/greyhole-x86_64-deb.so $(DESTDIR)usr/lib64/greyhole/greyhole-samba419.so
+	install -m 0644 -D -p samba-module/bin/4.20/greyhole-x86_64-deb.so $(DESTDIR)usr/lib64/greyhole/greyhole-samba420.so
+	install -m 0644 -D -p samba-module/bin/4.21/greyhole-x86_64-deb.so $(DESTDIR)usr/lib64/greyhole/greyhole-samba421.so
 	install -m 0644 -D -p samba-module/bin/4.22/greyhole-x86_64-deb.so $(DESTDIR)usr/lib64/greyhole/greyhole-samba422.so
 else
 ifeq ($(ARCH), armhf)
@@ -154,6 +156,8 @@ ifeq ($(ARCH), arm64)
 		install -m 0644 -D -p samba-module/bin/4.17/greyhole-arm64-deb.so $(DESTDIR)usr/lib/aarch64-linux-gnu/greyhole/greyhole-samba417.so
 		install -m 0644 -D -p samba-module/bin/4.18/greyhole-arm64-deb.so $(DESTDIR)usr/lib/aarch64-linux-gnu/greyhole/greyhole-samba418.so
 		install -m 0644 -D -p samba-module/bin/4.19/greyhole-arm64-deb.so $(DESTDIR)usr/lib/aarch64-linux-gnu/greyhole/greyhole-samba419.so
+		install -m 0644 -D -p samba-module/bin/4.20/greyhole-arm64-deb.so $(DESTDIR)usr/lib/aarch64-linux-gnu/greyhole/greyhole-samba420.so
+		install -m 0644 -D -p samba-module/bin/4.21/greyhole-arm64-deb.so $(DESTDIR)usr/lib/aarch64-linux-gnu/greyhole/greyhole-samba421.so
 		install -m 0644 -D -p samba-module/bin/4.22/greyhole-arm64-deb.so $(DESTDIR)usr/lib/aarch64-linux-gnu/greyhole/greyhole-samba422.so
 else
 		mkdir -p $(DESTDIR)usr/lib/greyhole/
